@@ -29,7 +29,7 @@ endif (WIN32)
 set_target_properties(libmosquitto PROPERTIES
 	OUTPUT_NAME mosquitto
 	VERSION ${VERSION}
-	SOVERSION 0
+	SOVERSION 1
 )
 
 install(TARGETS libmosquitto RUNTIME DESTINATION ${BINDIR} LIBRARY DESTINATION ${LIBDIR})
