@@ -133,12 +133,12 @@ struct mosquitto {
 	struct mosquitto_message_all *messages;
 	int log_priorities;
 	int log_destinations;
-	void (*on_connect)(void *obj, int rc);
-	void (*on_disconnect)(void *obj);
-	void (*on_publish)(void *obj, uint16_t mid);
-	void (*on_message)(void *obj, const struct mosquitto_message *message);
-	void (*on_subscribe)(void *obj, uint16_t mid, int qos_count, const uint8_t *granted_qos);
-	void (*on_unsubscribe)(void *obj, uint16_t mid);
+	void (*on_connect)(struct mosquitto *, void *obj, int rc);
+	void (*on_disconnect)(struct mosquitto *, void *obj);
+	void (*on_publish)(struct mosquitto *, void *obj, uint16_t mid);
+	void (*on_message)(struct mosquitto *, void *obj, const struct mosquitto_message *message);
+	void (*on_subscribe)(struct mosquitto *, void *obj, uint16_t mid, int qos_count, const uint8_t *granted_qos);
+	void (*on_unsubscribe)(struct mosquitto *, void *obj, uint16_t mid);
 	//void (*on_error)();
 	char *host;
 	int port;
