@@ -471,7 +471,7 @@ int _mosquitto_packet_write(struct mosquitto *mosq)
 		if(((packet->command)&0xF6) == PUBLISH && mosq->on_publish){
 			/* This is a QoS=0 message */
 			mosq->in_callback = true;
-			mosq->on_publish(mosq->obj, packet->mid);
+			mosq->on_publish(mosq, mosq->obj, packet->mid);
 			mosq->in_callback = false;
 		}
 #endif
